lang/macro/tests/ui/fail/H-03-use-forbidden-idents.stderr
error: identifiers starting with `__ink` are forbidden in ink!
  --> $DIR/H-03-use-forbidden-idents.rs:17:17
   |
17 |             let __ink_noop = ();
   |                 ^^^^^^^^^^
